--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   ch_color_ab:
     path: "./ch_color_ab/"
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
