--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   ch_color_ab:
     path: "./ch_color_ab/"
   http: ^1.1.0
+  currency_text_input_formatter: ^2.1.10
 
 dev_dependencies:
   flutter_test:
