--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     path: "./ch_color_ab/"
   http: ^1.1.0
   currency_text_input_formatter: ^2.1.10
+  flutter_markdown: ^0.6.17+4
 
 dev_dependencies:
   flutter_test:
