--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.1.0
   currency_text_input_formatter: ^2.1.10
   flutter_markdown: ^0.6.17+4
+  html2md: ^1.3.1
 
 dev_dependencies:
   flutter_test:
