--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    #- asset/
+    - asset/
     - asset/image/
     # - assets/images/
   #   - images/a_dot_burr.jpeg
