--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.10
   flutter_markdown: ^0.6.17+4
   html2md: ^1.3.1
+  webview_flutter: ^4.4.1
 
 dev_dependencies:
   flutter_test:
